rooster html gemaakt

--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
                   wanneer plaatsvinden. Plan uw week en mis nooit een workout.
                   Er is altijd een training die in uw schema past.
                 </p>
-                <a href="#" class="btn btn-primary">Bekijk het rooster</a>
+                <a href="rooster.html" class="btn btn-primary"
+                  >Bekijk het rooster</a
+                >
               </div>
               <div class="content-pane" id="powerwalk">
                 <img
