move-natural klaar

--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
                   focust op functionele bewegingspatronen zoals klimmen,
                   springen en balanceren voor een sterk en soepel lichaam.
                 </p>
-                <a href="#" class="btn btn-primary">Binnenkort meer info</a>
+                <a href="move-natural.html" class="btn btn-primary"
+                  >Ontdek Move Natural</a
+                >
               </div>
               <div class="content-pane" id="trailrunning">
                 <img
