--- a/index.html
+++ b/index.html
@@ -192,7 +192,9 @@
                   door de natuur. Verbeter uw techniek, kracht en
                   uithoudingsvermogen op uitdagend terrein.
                 </p>
-                <a href="#" class="btn btn-primary">Ontdek de trails</a>
+                <a href="trailrunning.html" class="btn btn-primary"
+                  >Ontdek de trails</a
+                >
               </div>
               <div class="content-pane" id="kettlebell">
                 <img
