--- a/index.html
+++ b/index.html
@@ -207,7 +207,9 @@
                   verbetert u kracht, stabiliteit, coördinatie en
                   uithoudingsvermogen in een korte, krachtige training.
                 </p>
-                <a href="#" class="btn btn-primary">Start met trainen</a>
+                <a href="kettlebelltraining.html" class="btn btn-primary"
+                  >Start met trainen</a
+                >
               </div>
               <div class="content-pane" id="start-to-run">
                 <img
